kubernetes/apps/home/confluence/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: confluence
  namespace: home
spec:
  ports:
    - name: confluence-app
      port: 80
      protocol: TCP
      targetPort: 8090
  clusterIP: None
  type: ClusterIP
