kubernetes/apps/home/confluence/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: confluence
  namespace: home
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: nginx
  rules:
    - host: "confluence.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: confluence
                port:
                  number: 8090
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "confluence.${SECRET_DOMAIN}"
      secretName: ${SECRET_DOMAIN}-tls
      namespace: networking
